# WEB-FB-CREATE

./: .gitattributes  .gitignore  .replit  Dockerfile  Procfile  app.py  auth.py  domains.json  domains.py  main.py  pyproject.toml  railway.toml  render.yaml  replit.md  requirements.txt  storage.py
attached_assets/: Pasted--Yuen-Dispo-Mail-Disposable-Email-Generator-class-YuenD_1778311762458.txt
attached_assets/webnew/WEB-FB-CREATE/: .gitattributes  .replit  app.py  domains.py  pyproject.toml  render.yaml  replit.md  storage.py
attached_assets/webnew/WEB-FB-CREATE/.agents/memory/: MEMORY.md  facebook-brotli-encoding.md
attached_assets/webnew/WEB-FB-CREATE/attached_assets/: Pasted--Yuen-Dispo-Mail-Disposable-Email-Generator-class-YuenD_1778328642474.txt  branding-1778845563261.json  teams.live.com_2026_07_16_18_59_33_1784225715504.har
attached_assets/webnew/WEB-FB-CREATE/templates/: admin.html  index.html  login.html
templates/: admin.html  admin_login.html  index.html  login.html
