[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fake-useragent>=2.2.0",
    "faker>=37.12.0",
    "requests>=2.32.5",
    "flask>=3.0.0",
    "pyotp>=2.9.0",
    "psycopg2-binary>=2.9.9",
]
